style: tab spacing fixed

--- a/src/assets/sass/components/_tabs.scss
+++ b/src/assets/sass/components/_tabs.scss
@@ -13,6 +13,7 @@
             border-bottom: 4px solid transparent;
             a{
                 border: 0;
+                padding: rem(14) 0;
                 border-radius: 0;
                 &:hover, &:focus{
                     border: 0;
@@ -30,6 +31,9 @@
                 a {
                     padding-left: 0;
                 }
+            }
+            &:nth-child(n+2) {
+                margin-left: rem(20);
             }
         }
     }
